# spdod

./: README.md  pyproject.toml
spdod/: play.py
spdod/plan/: model.py  models.py
tmux/: session  tmux.sh
