[tool.poetry]
name = "spdop"
version = "0.0.0"
description = "Symbolic planning for dialogue-distributed optimization."
authors = ["Justin Chiu <chiu.justin.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
scipy = "*"
jaxlib = "^0.4.14"
jax = "*"
tfp-nightly = "*"
numpyro = "*"
pyparsing = "*"
python-dateutil = "*"
rich = "*"
tiktoken = "*"
tyro = "*"
thefuzz = "*"
openai = "*"
dialop = { git = "https://github.com/justinchiu/dialop.git" }
Flask = { version = "2.2.2", optional = true }
Flask-SocketIO = { version = "5.3.2", optional = true }
Jinja2 = { version = "3.1.2", optional = true }
"ruamel.yaml" = { version = "0.17.21", optional = true }
Werkzeug = { version = "2.2.2", optional = true }
boto3 = { version = "1.26.69", optional = true }
ortools = "*"
seaborn = "*"

[tool.poetry.extras]
apps = ["Flask", "Flask-SocketIO", "Jinja2", "ruamel.yaml", "Werkzeug", "boto3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
